--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -49,7 +49,7 @@ jobs:
         id: pages
         uses: actions/configure-pages@v3
       - name: Install Node.js dependencies
-        run: "npm install && tailwindcss -i ./assets/css/main.css -o ./assets/css/style.css && npm run build"
+        run: "npm install && npm run build"
       - name: Build with Hugo
         env:
           # For maximum backward compatibility with Hugo modules
